--- a/Travel.html
+++ b/Travel.html
@@ -1,10 +1,13 @@
 <html>
 
 <head>
-  <title>TosGo - Travel with us</title>
-  <link rel="stylesheet" href="./css/home.css">
-  <link rel="stylesheet" href="./css/travel.css">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
+  <title>TosGo - Travel</title>
+  <link rel="stylesheet" href="./css/materialize.css">
   <link rel="stylesheet" href="./css/materialize.min.css">
+  <link rel="stylesheet" href="./css/home.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
 
@@ -12,16 +15,29 @@
   <div class="navbar-fixed">
     <nav>
       <div class="nav-wrapper mycolor">
+
         <div class="nav-wrapper container"><a id="logo-container" href="Index.html" class="brand-logo">TosGo</a>
-          <ul id="nav-mobile" class="right hide-on-med-and-down nav-ul">
+          <ul class="right hide-on-med-and-down nav-ul">
             <li><a href="Index.html">Home</a></li>
             <li><a href="Travel.html">WhereToGo</a></li>
             <li><a href="Career.html">Career</a></li>
             <li><a href="About.html">AboutUs</a></li>
           </ul>
+
+          <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+
         </div>
     </nav>
     </div>
+
+    <!-- Mobile -->
+    <ul id="slide-out" class="sidenav">
+      <li><a href="Index.html">Home</a></li>
+      <li><a href="Travel.html">WhereToGo</a></li>
+      <li><a href="Career.html">Career</a></li>
+      <li><a href="About.html">AboutUs</a></li>
+    </ul>
+    <!-- End Mobile -->
 
     <center>
       <h3>
@@ -32,20 +48,6 @@
     </center>
     <div class="container">
 
-      <!-- <div class="row">
-      <div class="col s4">
-            <a href="" target="_blank">
-              <div class="img-hover-zoom listing-item">
-                <figure>
-                  <img src="./img/gallery/">
-                  <span class="card-title">SiemReap</span>
-                </figure>
-              </div>
-            </a>
-          </div>
-      </div> -->
-
-      <!-- Row 1 -->
       <div class="row" position="fixed">
         <div class="col s4">
           <div class="card">
@@ -54,7 +56,7 @@
               <span class="card-title">Siem Reap</span>
             </div>
             <div class="card-content">
-              <p>សៀមរាបគឺជារាជធានីនៃខេត្តសៀមរាបនៅភាគពាយ័ព្យនៃប្រទេសកម្ពុជា។វាជាទីក្រុងរមនីយ៍ដ៏ពេញនិយម ...</p>
+              <p>សៀមរាបគឺជារាជធានីនៃខេត្តសៀមរាបនៅភាគពាយ័ព្យនៃប្រទេសកម្ពុជា ...</p>
             </div>
             <div class="card-action">
               <a href="Siemreap.html">Read More</a>
@@ -82,7 +84,7 @@
               <span class="card-title">BanTeay MeanChey</span>
             </div>
             <div class="card-content">
-              <p>បន្ទាយមានជ័យគឺជាខេត្ដមួយនៃប្រទេសកម្ពុជាស្ថិតនៅភាគពាយព្យ។វាមានព្រំប្រទល់ជាប់ ...
+              <p>បន្ទាយមានជ័យគឺជាខេត្ដមួយនៃប្រទេសកម្ពុជាស្ថិតនៅភាគពាយព្យ។វាមានព្រំប្រ ...
               </p>
             </div>
             <div class="card-action">
@@ -100,7 +102,7 @@
               <span class="card-title">Batdombong</span>
             </div>
             <div class="card-content">
-              <p>បាត់ដំបងគឺជា​​ខេត្ត​មួយ​ក្នុងចំនោម​ខេត្តទាំង​អស់​នៃព្រះរាជាណាចក្រ​កម្ពុជាដែលមាន វិសាលភាព​ផ្ទៃដីធំ មាន​ ...</p>
+              <p>បាត់ដំបងគឺជា​​ខេត្ត​មួយ​ក្នុងចំនោម​ខេត្តទាំង​អស់​នៃព្រះរាជាណាចក្រ​កម្ពុជាដែល​ ...</p>
             </div>
             <div class="card-action">
               <a href="Battdombong.html">Read More</a>
@@ -114,7 +116,7 @@
               <span class="card-title">Kandal</span>
             </div>
             <div class="card-content">
-              <p>កណ្តាលគឺជាខេត្តនៃប្រទេសកម្ពុជាដែលមានទីតាំងនៅប៉ែកអាគ្នេយ៍នៃប្រទេសនេះ។ ខេត្តមានព្រំដែន ខាងកើតជាប់ ...</p>
+              <p>កណ្តាលគឺជាខេត្តនៃប្រទេសកម្ពុជាដែលមានទីតាំងនៅប៉ែកអាគ្នេយ៍នៃប្រទេស ...</p>
             </div>
             <div class="card-action">
               <a href="Kandal.html">Read More</a>
@@ -128,7 +130,7 @@
               <span class="card-title">Kep</span>
             </div>
             <div class="card-content">
-              <p>​កែបជាខេត្ត​មួយ​ក្នុង​ចំណោម​ខេត្ត​ទាំង​៤​ដែល​ស្ថិត​នៅតាមឆ្នេរសមុទ្រភាគនិរតីនៃប្រទេសកម្ពុជា ...</p>
+              <p>​កែបជាខេត្ត​មួយ​ក្នុង​ចំណោម​ខេត្ត​ទាំង​៤​ដែល​ស្ថិត​នៅតាមឆ្នេរសមុទ្រភាគា ...</p>
             </div>
             <div class="card-action">
               <a href="Kep.html">Read More</a>
@@ -145,7 +147,7 @@
               <span class="card-title">Kompong Cham</span>
             </div>
             <div class="card-content">
-              <p>កំពង់ចាមគឺជាខេត្តនៃប្រទេសកម្ពុជា ដែលស្ថិតនៅវាលទំនាប កណ្ដាលនៃទន្លេមេគង្គនៅជាតែ ...</p>
+              <p>កំពង់ចាមគឺជាខេត្តនៃប្រទេសកម្ពុជា ដែលស្ថិតនៅវាលទំនាប កណ្ដាលនៃែ ...</p>
             </div>
             <div class="card-action">
               <a href="Kompongcham.html">Read More</a>
@@ -159,7 +161,7 @@
               <span class="card-title">Kompong Chang</span>
             </div>
             <div class="card-content">
-              <p>កំពង់ឆ្នាំជាទីក្រុងឆ្នេរនៅតាមច្រកផ្លូវរវាងចិន និងឥណ្ឌាដោយសារតែការហូរនាំដីល្បប់ពី ...
+              <p>កំពង់ឆ្នាំជាទីក្រុងឆ្នេរនៅតាមច្រកផ្លូវរវាងចិន និងឥណ្ឌាដោយសារតែការហូរនាំដី ...
               </p>
             </div>
             <div class="card-action">
@@ -174,7 +176,7 @@
               <span class="card-title">Kompong Thom</span>
             </div>
             <div class="card-content">
-              <p>កំពង់ធំគឹជាខេត្តដែលមាន សក្តានុពលខាង វិស័យទេសចរណ៍ ដែលទាក់ទាញចិត្តភ្ញៀវទេសចរណ៍ ...</p>
+              <p>កំពង់ធំគឹជាខេត្តដែលមាន សក្តានុពលខាង វិស័យទេសចរណ៍ ដែលទាក់ ...</p>
             </div>
             <div class="card-action">
               <a href="Kompongthom.html">Read More</a>
@@ -191,7 +193,7 @@
               <span class="card-title">Kompot</span>
             </div>
             <div class="card-content">
-              <p>កំពតជាខេត្តមួយស្ថិតនៅប៉ែកខាងត្បូងនៃប្រទេសកម្ពុជា មានចម្ងាយ ១៤៨ គ.ម. ពីទីក្រុងភ្នំពេញ ...</p>
+              <p>កំពតជាខេត្តមួយស្ថិតនៅប៉ែកខាងត្បូងនៃប្រទេសកម្ពុជា មានចម្ងាយ ១៤៨ គ.ម ...</p>
             </div>
             <div class="card-action">
               <a href="Kompot.html">Read More</a>
@@ -205,7 +207,7 @@
               <span class="card-title">Koh Kong</span>
             </div>
             <div class="card-content">
-              <p>ខេត្តកោះកុងមានរមណីយដ្ឋានធម្មជាតិយ៉ាងច្រើនដើម្បីទាក់ទាញភ្ញៀវទេសចរណ៌ហើយភាគច្រើន ...</p>
+              <p>ខេត្តកោះកុងមានរមណីយដ្ឋានធម្មជាតិយ៉ាងច្រើនដើម្បីទាក់ទាញភ្ញៀវទេស ...</p>
             </div>
             <div class="card-action">
               <a href="Koskong.html">Read More</a>
@@ -219,7 +221,7 @@
               <span class="card-title">Kratie</span>
             </div>
             <div class="card-content">
-              <p>ក្រចេះសម្បូរដោយធនធានធម្មជាតិនៅលើដីមានព្រៃព្រឹក្សាវាលស្រែដីមានជីជាត ...</p>
+              <p>ក្រចេះសម្បូរដោយធនធានធម្មជាតិនៅលើដីមានព្រៃព្រឹក្សាវាល ...</p>
             </div>
             <div class="card-action">
               <a href="Kratie.html">Read More</a>
@@ -236,7 +238,7 @@
               <span class="card-title">Mondolkiri</span>
             </div>
             <div class="card-content">
-              <p>មណ្ឌលគីរីស្ថិតនៅភាគឦសាននៃប្រទេសកម្ពុជា គឺជាដែនដីសម្បូរទៅដោយព្រឹក្សព្រៃ និង់ ...</p>
+              <p>មណ្ឌលគីរីស្ថិតនៅភាគឦសាននៃប្រទេសកម្ពុជា គឺជាដែនដីសម្បូរទៅដោយព្រឹក្ស ...</p>
             </div>
             <div class="card-action">
               <a href="Mondolkiri.html">Read More</a>
@@ -250,7 +252,7 @@
               <span class="card-title">Oddormeanchey</span>
             </div>
             <div class="card-content">
-              <p>ឧត្តរមានជ័យស្ថិតនៅប៉ែកខាងជើងឈៀងខាងលិចនៃប្រទេសកម្ពុជា ដែលមានព្រំប្រទល់ ...</p>
+              <p>ឧត្តរមានជ័យស្ថិតនៅប៉ែកខាងជើងឈៀងខាងលិចនៃប្រទេសកម្ពុជា ដែលមានព្រំ់ ...</p>
             </div>
             <div class="card-action">
               <a href="Oddormeanchey.html">Read More</a>
@@ -264,7 +266,7 @@
               <span class="card-title">Pailen</span>
             </div>
             <div class="card-content">
-              <p>ប៉ៃលិន​ជា​ខេត្ត​មួយ​ស្ថិត​នៅ​ជ្រុង​ខាង​ជើង​នៃ​ជួរ​ភ្នំ​ក្រវាញ​ភាគ​ខាង​លិច​នៃ​ព្រះរាជាណាចក្រ​កម្ពុជា​ដែល​​ ...</p>
+              <p>ប៉ៃលិន​ជា​ខេត្ត​មួយ​ស្ថិត​នៅ​ជ្រុង​ខាង​ជើង​នៃ​ជួរ​ភ្នំ​ក្រវាញ​ភាគ​ខាង​លិច​នៃ​ព្រះរាជាណាចក្រ​ ...</p>
             </div>
             <div class="card-action">
               <a href="Pailen.html">Read More</a>
@@ -281,7 +283,7 @@
               <span class="card-title">Preh Vihear</span>
             </div>
             <div class="card-content">
-              <p>ប្រាសាទព្រះវិហារជាប្រាសាទភ្នំដែលកសាងនៅលើកំពូលភ្នំព្រះវិហារនៃជួរភ្នំដងរែក ...</p>
+              <p>ប្រាសាទព្រះវិហារជាប្រាសាទភ្នំដែលកសាងនៅលើកំពូលភ្នំព្រះវិហារនៃជួរភ្នំដងរែក <br>...</p>
             </div>
             <div class="card-action">
               <a href="Vihear.html">Read More</a>
@@ -295,7 +297,7 @@
               <span class="card-title">Prey Veng</span>
             </div>
             <div class="card-content">
-              <p>ព្រៃវែង​ ជាតំបន់​ទេសចរណ៍មួយ ដ៏ទាក់ទាញ បែប វប្បធម៌ និង ​ធម្មជាតិ កែឆ្នៃដែល់ ...</p>
+              <p>ព្រៃវែង​ជាតំបន់​ទេសចរណ៍មួយ ដ៏ទាក់ទាញ បែប វប្បធម៌ និង ​ធម្មជាតិ កែឆ្នៃដែល់ ...</p>
             </div>
             <div class="card-action">
               <a href="Prey Veng.html">Read More</a>
@@ -326,7 +328,7 @@
               <span class="card-title">Sihanukvilk</span>
             </div>
             <div class="card-content">
-              <p>ព្រះសីហនុជាខេត្តមួយស្ថិតនៅភាគនីរតីនៃ​​​ប្រទេសកម្ពុជាដែលសំបូរទៅដោយតំបន់ទេសចរណ៍ ...</p>
+              <p>ព្រះសីហនុជាខេត្តមួយស្ថិតនៅភាគនីរតីនៃ​​​ប្រទេសកម្ពុជាដែលសំបូរទៅដោយ ...</p>
             </div>
             <div class="card-action">
               <a href="Sihaknuk.html">Read More</a>
@@ -340,7 +342,7 @@
               <span class="card-title">Steng Trang</span>
             </div>
             <div class="card-content">
-              <p>ស្ទឹងត្រែងគឺជាស្រុកតាមបណ្តោយព្រំដែនដ៏ធំមួយនៅភាគខាងជើងនៃខេត្តដែលមានទីតាំងនៅលើ ...</p>
+              <p>ស្ទឹងត្រែងគឺជាស្រុកតាមបណ្តោយព្រំដែនដ៏ធំមួយនៅភាគខាងជើងនៃខេត្ត ...</p>
             </div>
             <div class="card-action">
               <a href="Stengtrang.html">Read More</a>
@@ -354,7 +356,7 @@
               <span class="card-title">Takeo</span>
             </div>
             <div class="card-content">
-              <p>តាកែវគឺជាខេត្តមួយនៃប្រទេសកម្ពុជា។ ទីរួមខេត្តរបស់ខេត្តនេះគឺក្រុងដូនកែវ។ តាំងនៅភាគ ...</p>
+              <p>តាកែវគឺជាខេត្តមួយនៃប្រទេសកម្ពុជា។ ទីរួមខេត្តរបស់ខេត្តនេះគឺក្រុងដូនកែវ ...</p>
             </div>
             <div class="card-action">
               <a href="Takeo.html">Read More</a>
@@ -371,7 +373,7 @@
               <span class="card-title">Tbong Khmom</span>
             </div>
             <div class="card-content">
-              <p>​ត្បូងឃ្មុំជា​ខេត្ត ឬ​ភូមិភាគដែល​បុរាណ​ហៅ​ថា “​ដី​”(​ក្សេត្រ​)គ្រប់គ្រង​ដោយ​ស្តេចត្រាញ់​ ...</p>
+              <p>​ត្បូងឃ្មុំជា​ខេត្ត ឬ​ភូមិភាគដែល​បុរាណ​ហៅ​ថា “​ដី​”(​ក្សេត្រ​)គ្រប់គ្រង​ដោយ​ ...</p>
             </div>
             <div class="card-action">
               <a href="Tbongkhmom.html">Read More</a>
@@ -385,7 +387,7 @@
               <span class="card-title">Svay Rieng</span>
             </div>
             <div class="card-content">
-              <p>ស្វាយរៀងជាខេត្តមួយដែលមានទីតាំងស្ថិតនៅជិតច្រក​ដ៏​សំខាន់​សម្រាប់ចរាចរ​ផ្លូវគោក ទំនាក់ទំនងរវាង​ ...</p>
+              <p>ស្វាយរៀងជាខេត្តមួយដែលមានទីតាំងស្ថិតនៅជិតច្រក​ដ៏​សំខាន់​សម្រាប់ ...</p>
             </div>
             <div class="card-action">
               <a href="Svay rieng.html">Read More</a>
@@ -399,7 +401,7 @@
               <span class="card-title">Kompong Speu</span>
             </div>
             <div class="card-content">
-              <p>កំពង់ស្ពឺមានឧទ្យានជាតិព្រះសុរាម្រិតកុសមៈ៖ គីរីរម្យ​ជា​រមណីយដ្ឋាន​ធម្មជាតិ តំបន់​នេះ​ ...</p>
+              <p>កំពង់ស្ពឺមានឧទ្យានជាតិព្រះសុរាម្រិតកុសមៈ៖ គីរីរម្យ​ជា​រមណីយដ្ឋាន​ធម្មជាតិ ...</p>
             </div>
             <div class="card-action">
               <a href="kompongspeu.html">Read More</a>
@@ -424,6 +426,23 @@
         <a href="#" class="feed_back">feedback@TosGo.com</a>
       </footer>
     </center>
+
+    <script src="./js/jquery-3.2.1.min.js"></script>
+    <script src="./js/materialize.min.js" type="text/javascript"></script>
+    <script>
+      document.addEventListener('DOMContentLoaded', function() {
+        var elems = document.querySelectorAll('.slider');
+        var instances = M.Slider.init(elems);
+      });
+
+      // Or with jQuery
+
+      $(document).ready(function() {
+        $('.sidenav').sidenav();
+        $('.slider').slider();
+      });
+    </script>
+
 </body>
 
 </html>
