--- a/About.html
+++ b/About.html
@@ -2,9 +2,13 @@
 <html>
 
 <head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
 	<title>TosGo - About Us</title>
+	<link rel="stylesheet" href="./css/materialize.css">
 	<link rel="stylesheet" href="./css/materialize.min.css">
 	<link rel="stylesheet" href="./css/home.css">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
@@ -12,19 +16,33 @@
 	<div class="navbar-fixed">
 		<nav>
 			<div class="nav-wrapper mycolor">
+
 				<div class="nav-wrapper container"><a id="logo-container" href="Index.html" class="brand-logo">TosGo</a>
-					<ul id="nav-mobile" class="right hide-on-med-and-down nav-ul">
+					<ul class="right hide-on-med-and-down nav-ul">
 						<li><a href="Index.html">Home</a></li>
 						<li><a href="Travel.html">WhereToGo</a></li>
 						<li><a href="Career.html">Career</a></li>
 						<li><a href="About.html">AboutUs</a></li>
 					</ul>
+
+					<a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+
 				</div>
 		</nav>
 		</div>
 
+		<!-- Mobile -->
+		<ul id="slide-out" class="sidenav">
+			<li><a href="Index.html">Home</a></li>
+			<li><a href="Travel.html">WhereToGo</a></li>
+			<li><a href="Career.html">Career</a></li>
+			<li><a href="About.html">AboutUs</a></li>
+		</ul>
+		<!-- End Mobile -->
+
 		<div class="container">
-			<img src="./img/about/setec.png" width="100%" height="270" class="center">
+			<br>
+			<img src="./img/about/setec.png" width="100%" height="100" class="center">
 			<h3 class="center">
 			<b>ABOUT US</b>
 		</h3>
@@ -36,61 +54,61 @@
 			<!-- Komsan -->
 			<div class="row">
 				<br>
-				<div class="col s3">
-					<img src="./img/about/komsan.jpg" width="100%" height="320" vspace="8">
+				<div class="col s5" class="center">
+					<img src="./img/about/komsan.jpg" width="100%" height="150" vspace="5">
 				</div>
-				<div class="col s9">
-					<img src="./img/about/komsan_info.jpg" width="60%" height="320" class="info">
+				<div class="col s7">
+					<img src="./img/about/komsan_info.jpg" width="95%" height="160" class="info">
 				</div>
 			</div>
 			<br>
 			<!-- Sovandara -->
 			<div class="row">
-				<div class="col s3">
-					<img src="./img/about/sovandara1.png" width="100%" height="320" vspace="8">
+				<div class="col s5">
+					<img src="./img/about/sovandara1.png" width="100%" height="150" vspace="5">
 				</div>
-				<div class="col s9">
-					<img src="./img/about/sovandara_info.jpg" width="60%" height="320" class="info">
+				<div class="col s7">
+					<img src="./img/about/sovandara_info.jpg" width="95%" height="160" class="info">
 				</div>
 			</div>
 			<br>
 			<!-- Sanda -->
 			<div class="row">
-				<div class="col s3">
-					<img src="./img/about/sanda1.png" width="100%" height="320" vspace="8">
+				<div class="col s5">
+					<img src="./img/about/sanda1.png" width="100%" height="150" vspace="5">
 				</div>
-				<div class="col s9">
-					<img src="./img/about/sanda_info.jpg" width="60%" height="320" class="info">
+				<div class="col s7">
+					<img src="./img/about/sanda_info.jpg" width="95%" height="160" class="info">
 				</div>
 			</div>
 			<br>
 			<!-- kheang -->
 			<div class="row">
-				<div class="col s3">
-					<img src="./img/about/kheang1.png" width="100%" height="320" vspace="8">
+				<div class="col s5">
+					<img src="./img/about/kheang1.png" width="100%" height="160" vspace="5">
 				</div>
-				<div class="col s9">
-					<img src="./img/about/kheang_info.jpg" width="60%" height="320" class="info">
+				<div class="col s7">
+					<img src="./img/about/kheang_info.jpg" width="95%" height="160" class="info">
 				</div>
 			</div>
 			<br>
 			<!-- Sokdarom -->
 			<div class="row">
-				<div class="col s3">
-					<img src="./img/about/darom1.png" width="100%" height="320" vspace="8">
+				<div class="col s5">
+					<img src="./img/about/darom1.png" width="100%" height="160" vspace="5">
 				</div>
-				<div class="col s9">
-					<img src="./img/about/darom_info.jpg" width="60%" height="320" class="info">
+				<div class="col s7">
+					<img src="./img/about/darom_info.jpg" width="95%" height="160" class="info">
 				</div>
 			</div>
 
 			<!-- Sovannara -->
 			<div class="row">
-				<div class="col s3">
-					<img src="./img/about/sovannara.jpg" width="100%" height="320" vspace="8">
+				<div class="col s5">
+					<img src="./img/about/sovannara.jpg" width="100%" height="160" vspace="5">
 				</div>
-				<div class="col s9">
-					<img src="./img/about/sovannara_info.jpg" width="60%" height="320" class="info">
+				<div class="col s7">
+					<img src="./img/about/sovannara_info.jpg" width="95%" height="160" class="info">
 				</div>
 			</div>
 		</div>
@@ -106,6 +124,22 @@
 				<a href="#" class="feed_back">feedback@TosGo.com</a>
 			</footer>
 		</center>
+
+		<script src="./js/jquery-3.2.1.min.js"></script>
+		<script src="./js/materialize.min.js" type="text/javascript"></script>
+		<script>
+			document.addEventListener('DOMContentLoaded', function() {
+				var elems = document.querySelectorAll('.slider');
+				var instances = M.Slider.init(elems);
+			});
+
+			// Or with jQuery
+
+			$(document).ready(function() {
+				$('.sidenav').sidenav();
+				$('.slider').slider();
+			});
+		</script>
 </body>
 
 </html>
