--- a/High-quality-prints.html
+++ b/High-quality-prints.html
@@ -2,134 +2,154 @@
 <html>
 
 <head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
   <title>TosGo - High Quality Prints</title>
+  <link rel="stylesheet" href="./css/materialize.css">
   <link rel="stylesheet" href="./css/materialize.min.css">
   <link rel="stylesheet" href="./css/home.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
   <div class="navbar-fixed">
     <nav>
       <div class="nav-wrapper mycolor">
+
         <div class="nav-wrapper container"><a id="logo-container" href="Index.html" class="brand-logo">TosGo</a>
-          <ul id="nav-mobile" class="right hide-on-med-and-down nav-ul">
+          <ul class="right hide-on-med-and-down nav-ul">
             <li><a href="Index.html">Home</a></li>
             <li><a href="Travel.html">WhereToGo</a></li>
             <li><a href="Career.html">Career</a></li>
             <li><a href="About.html">AboutUs</a></li>
           </ul>
+
+          <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+
         </div>
     </nav>
     </div>
 
-    <h3 class="center"><b>Gallery</b></h3>
-    <hr color="#00a680">
-    <br>
-    <!-- Row 1 -->
-    <center>
-      <div class="row">
-        <div class="col s2">
-          <a href="./img/cover/biggest-buddha-05_large.jpg">
-            <img src="./img/cover/biggest-buddha-05_large.jpg" width="95%" height="150">
+    <!-- Mobile -->
+    <ul id="slide-out" class="sidenav">
+      <li><a href="Index.html">Home</a></li>
+      <li><a href="Travel.html">WhereToGo</a></li>
+      <li><a href="Career.html">Career</a></li>
+      <li><a href="About.html">AboutUs</a></li>
+    </ul>
+    <!-- End Mobile -->
+
+    <div class="content">
+      <h3 class="center"><b>Gallery</b></h3>
+      <hr color="#00a680">
+      <br>
+      <!-- Row 1 -->
+      <center>
+        <div class="row">
+          <div class="col s2">
+            <a href="./img/cover/biggest-buddha-05_large.jpg">
+            <img src="./img/cover/biggest-buddha-05_large.jpg" width="95%" height="100">
           </a>
-        </div>
-        <div class="col s2">
-          <a href="./img/cover/Bong-teay-kdey-Siem-Reap.jpg">
-            <img src="./img/cover/Bong-teay-kdey-Siem-Reap.jpg" width="95%" height="150">
+          </div>
+          <div class="col s2">
+            <a href="./img/cover/Bong-teay-kdey-Siem-Reap.jpg">
+            <img src="./img/cover/Bong-teay-kdey-Siem-Reap.jpg" width="95%" height="100">
           </a>
-        </div>
-        <div class="col s2">
-          <a href="./img/cover/Buddhist_monks_in_front_of_the_Angkor_Wat.jpg">
-            <img src="./img/cover/Buddhist_monks_in_front_of_the_Angkor_Wat.jpg" width="95%" height="150">
+          </div>
+          <div class="col s2">
+            <a href="./img/cover/Buddhist_monks_in_front_of_the_Angkor_Wat.jpg">
+            <img src="./img/cover/Buddhist_monks_in_front_of_the_Angkor_Wat.jpg" width="95%" height="100">
           </a>
-        </div>
-        <div class="col s2">
-          <a href="./img/cover/WatPhnom_PhnomPenh_2005_2.jpg">
-            <img src="./img/cover/WatPhnom_PhnomPenh_2005_2.jpg" width="95%" height="150">
+          </div>
+          <div class="col s2">
+            <a href="./img/cover/WatPhnom_PhnomPenh_2005_2.jpg">
+            <img src="./img/cover/WatPhnom_PhnomPenh_2005_2.jpg" width="95%" height="100">
           </a>
-        </div>
-        <div class="col s2">
-          <a href="./img/gallery/banteaymeanchey/koh-keh-02_large.jpg">
-            <img src="./img/gallery/banteaymeanchey/koh-keh-02_large.jpg" width="95%" height="150">
+          </div>
+          <div class="col s2">
+            <a href="./img/gallery/banteaymeanchey/koh-keh-02_large.jpg">
+            <img src="./img/gallery/banteaymeanchey/koh-keh-02_large.jpg" width="95%" height="100">
           </a>
-        </div>
-        <div class="col s2">
-          <a href="./img/gallery/batdombong/4026392928_1261b05a2c_z-ae0292657585c39091cb8af4e77d3ef4a2d995f3.jpg">
-            <img src="./img/gallery/batdombong/4026392928_1261b05a2c_z-ae0292657585c39091cb8af4e77d3ef4a2d995f3.jpg" width="95%" height="150">
+          </div>
+          <div class="col s2">
+            <a href="./img/gallery/batdombong/4026392928_1261b05a2c_z-ae0292657585c39091cb8af4e77d3ef4a2d995f3.jpg">
+            <img src="./img/gallery/batdombong/4026392928_1261b05a2c_z-ae0292657585c39091cb8af4e77d3ef4a2d995f3.jpg" width="95%" height="100">
           </a>
+          </div>
         </div>
-      </div>
-    </center>
-    <!-- Row 2 -->
-    <center>
-      <div class="row">
-        <div class="col s2">
-          <a href="./img/gallery/batdombong/D12_PhnomBakheng04.jpg">
-              <img src="./img/gallery/batdombong/D12_PhnomBakheng04.jpg" width="95%" height="150">
+      </center>
+      <!-- Row 2 -->
+      <center>
+        <div class="row">
+          <div class="col s2">
+            <a href="./img/gallery/batdombong/D12_PhnomBakheng04.jpg">
+              <img src="./img/gallery/batdombong/D12_PhnomBakheng04.jpg" width="95%" height="100">
             </a>
-        </div>
-        <div class="col s2">
-          <a href="./img/gallery/kep/kep-city-960x640.jpg">
-              <img src="./img/gallery/kep/kep-city-960x640.jpg" width="95%" height="150">
+          </div>
+          <div class="col s2">
+            <a href="./img/gallery/kep/kep-city-960x640.jpg">
+              <img src="./img/gallery/kep/kep-city-960x640.jpg" width="95%" height="100">
             </a>
-        </div>
-        <div class="col s2">
-          <a href="./img/gallery/kep/kep-cambodia-restaurant.jpg">
-              <img src="./img/gallery/kep/kep-cambodia-restaurant.jpg" width="95%" height="150">
+          </div>
+          <div class="col s2">
+            <a href="./img/gallery/kep/kep-cambodia-restaurant.jpg">
+              <img src="./img/gallery/kep/kep-cambodia-restaurant.jpg" width="95%" height="100">
             </a>
-        </div>
-        <div class="col s2">
-          <a href="./img/gallery/kompongcham/cover.jpg">
-              <img src="./img/gallery/kompongcham/cover.jpg" width="95%" height="150">
+          </div>
+          <div class="col s2">
+            <a href="./img/gallery/kompongcham/cover.jpg">
+              <img src="./img/gallery/kompongcham/cover.jpg" width="95%" height="100">
             </a>
-        </div>
-        <div class="col s2">
-          <a href="./img/gallery/kompongthom/1280px-Cliff_view_phnom_santuk_05032011133.jpg">
-              <img src="./img/gallery/kompongthom/1280px-Cliff_view_phnom_santuk_05032011133.jpg" width="95%" height="150">
+          </div>
+          <div class="col s2">
+            <a href="./img/gallery/kompongthom/1280px-Cliff_view_phnom_santuk_05032011133.jpg">
+              <img src="./img/gallery/kompongthom/1280px-Cliff_view_phnom_santuk_05032011133.jpg" width="95%" height="100">
             </a>
-        </div>
-        <div class="col s2">
-          <a href="./img/gallery/mondolkiri/5b28c4cd11ca9_1529398440_large.jpg">
-              <img src="./img/gallery/mondolkiri/5b28c4cd11ca9_1529398440_large.jpg" width="95%" height="150">
+          </div>
+          <div class="col s2">
+            <a href="./img/gallery/mondolkiri/5b28c4cd11ca9_1529398440_large.jpg">
+              <img src="./img/gallery/mondolkiri/5b28c4cd11ca9_1529398440_large.jpg" width="95%" height="100">
             </a>
+          </div>
         </div>
-      </div>
-    </center>
-    <!-- Row 3 -->
-    <center>
-      <div class="row">
-        <div class="col s2">
-          <a href="./img/gallery/mondolkiri/cambodia-waterfall-1070x732.jpg">
-            <img src="./img/gallery/mondolkiri/cambodia-waterfall-1070x732.jpg" width="95%" height="150">
+      </center>
+      <!-- Row 3 -->
+      <center>
+        <div class="row">
+          <div class="col s2">
+            <a href="./img/gallery/mondolkiri/cambodia-waterfall-1070x732.jpg">
+            <img src="./img/gallery/mondolkiri/cambodia-waterfall-1070x732.jpg" width="95%" height="100">
           </a>
-        </div>
-        <div class="col s2">
-          <a href="./img/gallery/mondolkiri/Cambogia-3.jpg">
-            <img src="./img/gallery/mondolkiri/Cambogia-3.jpg" width="95%" height="150">
+          </div>
+          <div class="col s2">
+            <a href="./img/gallery/mondolkiri/Cambogia-3.jpg">
+            <img src="./img/gallery/mondolkiri/Cambogia-3.jpg" width="95%" height="100">
           </a>
-        </div>
-        <div class="col s2">
-          <a href="./img/gallery/mondolkiri/cr_de_la_harpe_africa_media_online_sipa.jpg">
-            <img src="./img/gallery/mondolkiri/cr_de_la_harpe_africa_media_online_sipa.jpg" width="95%" height="150">
+          </div>
+          <div class="col s2">
+            <a href="./img/gallery/mondolkiri/cr_de_la_harpe_africa_media_online_sipa.jpg">
+            <img src="./img/gallery/mondolkiri/cr_de_la_harpe_africa_media_online_sipa.jpg" width="95%" height="100">
           </a>
-        </div>
-        <div class="col s2">
-          <a href="./img/gallery/mondolkiri/vistikh.jpg">
-            <img src="./img/gallery/mondolkiri/vistikh.jpg" width="95%" height="150">
+          </div>
+          <div class="col s2">
+            <a href="./img/gallery/mondolkiri/vistikh.jpg">
+            <img src="./img/gallery/mondolkiri/vistikh.jpg" width="95%" height="100">
           </a>
-        </div>
-        <div class="col s2">
-          <a href="./img/gallery/other/timthumb.jpg">
-            <img src="./img/gallery/other/timthumb.jpg" width="95%" height="150">
+          </div>
+          <div class="col s2">
+            <a href="./img/gallery/other/timthumb.jpg">
+            <img src="./img/gallery/other/timthumb.jpg" width="95%" height="100">
           </a>
-        </div>
-        <div class="col s2">
-          <a href="./img/gallery/PP/Phnom_Penh_sunset.jpg">
-            <img src="./img/gallery/PP/Phnom_Penh_sunset.jpg" width="95%" height="150">
+          </div>
+          <div class="col s2">
+            <a href="./img/gallery/PP/Phnom_Penh_sunset.jpg">
+            <img src="./img/gallery/PP/Phnom_Penh_sunset.jpg" width="95%" height="100">
           </a>
+          </div>
         </div>
-      </div>
-    </center> <br>
+      </center>
+    </div>
+
     <!-- Footer -->
     <center>
       <footer>
@@ -141,6 +161,22 @@
         <a href="#" class="feed_back">feedback@TosGo.com</a>
       </footer>
     </center>
+
+    <script src="./js/jquery-3.2.1.min.js"></script>
+    <script src="./js/materialize.min.js" type="text/javascript"></script>
+    <script>
+      document.addEventListener('DOMContentLoaded', function() {
+        var elems = document.querySelectorAll('.slider');
+        var instances = M.Slider.init(elems);
+      });
+
+      // Or with jQuery
+
+      $(document).ready(function() {
+        $('.sidenav').sidenav();
+        $('.slider').slider();
+      });
+    </script>
 </body>
 
 </html>
