--- a/Tailor.html
+++ b/Tailor.html
@@ -2,31 +2,49 @@
 <html>
 
 <head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
   <title>TosGo - Tailor</title>
+  <link rel="stylesheet" href="./css/materialize.css">
   <link rel="stylesheet" href="./css/materialize.min.css">
   <link rel="stylesheet" href="./css/home.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
   <div class="navbar-fixed">
     <nav>
       <div class="nav-wrapper mycolor">
+
         <div class="nav-wrapper container"><a id="logo-container" href="Index.html" class="brand-logo">TosGo</a>
-          <ul id="nav-mobile" class="right hide-on-med-and-down nav-ul">
+          <ul class="right hide-on-med-and-down nav-ul">
             <li><a href="Index.html">Home</a></li>
             <li><a href="Travel.html">WhereToGo</a></li>
             <li><a href="Career.html">Career</a></li>
             <li><a href="About.html">AboutUs</a></li>
           </ul>
+
+          <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+
         </div>
     </nav>
     </div>
 
-    <center>
-      <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-      <h2>Coming Soon ...</h2>
-    </center>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <!-- Mobile -->
+    <ul id="slide-out" class="sidenav">
+      <li><a href="Index.html">Home</a></li>
+      <li><a href="Travel.html">WhereToGo</a></li>
+      <li><a href="Career.html">Career</a></li>
+      <li><a href="About.html">AboutUs</a></li>
+    </ul>
+    <!-- End Mobile -->
+
+    <div class="content">
+      <center>
+        <h2>Coming Soon ...</h2>
+      </center>
+    </div>
+
     <!-- Footer -->
     <center>
       <footer>
@@ -37,6 +55,23 @@
         <a href="#" class="feed_back">feedback@TosGo.com</a>
       </footer>
     </center>
+
+    <script src="./js/jquery-3.2.1.min.js"></script>
+    <script src="./js/materialize.min.js" type="text/javascript"></script>
+    <script>
+      document.addEventListener('DOMContentLoaded', function() {
+        var elems = document.querySelectorAll('.slider');
+        var instances = M.Slider.init(elems);
+      });
+
+      // Or with jQuery
+
+      $(document).ready(function() {
+        $('.sidenav').sidenav();
+        $('.slider').slider();
+      });
+    </script>
+
 </body>
 
 </html>
