--- a/About.html
+++ b/About.html
@@ -42,7 +42,13 @@
 
 		<div class="container">
 			<br>
-			<img src="./img/about/setec.png" width="100%" height="100" class="center">
+			<a href="./img/about/setec.png">
+				<div class="img-hover-zoom">
+					<figure>
+						<img src="./img/about/setec.png" class="responsive_img">
+					</figure>
+				</div>
+			</a>
 			<h3 class="center">
 			<b>ABOUT US</b>
 		</h3>
@@ -54,61 +60,97 @@
 			<!-- Komsan -->
 			<div class="row">
 				<br>
-				<div class="col s5" class="center">
-					<img src="./img/about/komsan.jpg" width="100%" height="150" vspace="5">
+				<div class="col s4" class="center">
+					<a href="./img/about/komsan.jpg">
+						<div class="img-hover-zoom">
+							<figure>
+								<img src="./img/about/komsan.jpg" class="responsive_img">
+							</figure>
+						</div>
+					</a>
 				</div>
-				<div class="col s7">
-					<img src="./img/about/komsan_info.jpg" width="95%" height="160" class="info">
+				<div class="col s8">
+					<img src="./img/about/komsan_info.jpg" width="100%" class="info">
 				</div>
 			</div>
 			<br>
 			<!-- Sovandara -->
 			<div class="row">
-				<div class="col s5">
-					<img src="./img/about/sovandara1.png" width="100%" height="150" vspace="5">
+				<div class="col s4">
+					<a href="./img/about/sovandara1.png">
+						<div class="img-hover-zoom">
+							<figure>
+								<img src="./img/about/sovandara1.png" class="responsive_img">
+							</figure>
+						</div>
+					</a>
 				</div>
-				<div class="col s7">
-					<img src="./img/about/sovandara_info.jpg" width="95%" height="160" class="info">
+				<div class="col s8">
+					<img src="./img/about/sovandara_info.jpg" width="100%" class="info">
 				</div>
 			</div>
 			<br>
 			<!-- Sanda -->
 			<div class="row">
-				<div class="col s5">
-					<img src="./img/about/sanda1.png" width="100%" height="150" vspace="5">
+				<div class="col s4">
+					<a href="./img/about/sanda1.png">
+						<div class="img-hover-zoom">
+							<figure>
+								<img src="./img/about/sanda1.png" class="responsive_img">
+							</figure>
+						</div>
+					</a>
 				</div>
-				<div class="col s7">
-					<img src="./img/about/sanda_info.jpg" width="95%" height="160" class="info">
+				<div class="col s8">
+					<img src="./img/about/sanda_info.jpg" width="100%" class="info">
 				</div>
 			</div>
 			<br>
 			<!-- kheang -->
 			<div class="row">
-				<div class="col s5">
-					<img src="./img/about/kheang1.png" width="100%" height="160" vspace="5">
+				<div class="col s4">
+					<a href="./img/about/kheang1.png">
+						<div class="img-hover-zoom">
+							<figure>
+								<img src="./img/about/kheang1.png" class="responsive_img">
+							</figure>
+						</div>
+					</a>
 				</div>
-				<div class="col s7">
-					<img src="./img/about/kheang_info.jpg" width="95%" height="160" class="info">
+				<div class="col s8">
+					<img src="./img/about/kheang_info.jpg" width="100%" class="info">
 				</div>
 			</div>
 			<br>
 			<!-- Sokdarom -->
 			<div class="row">
-				<div class="col s5">
-					<img src="./img/about/darom1.png" width="100%" height="160" vspace="5">
+				<div class="col s4">
+					<a href="./img/about/darom1.png">
+						<div class="img-hover-zoom">
+							<figure>
+								<img src="./img/about/darom1.png" class="responsive_img">
+							</figure>
+						</div>
+					</a>
 				</div>
-				<div class="col s7">
-					<img src="./img/about/darom_info.jpg" width="95%" height="160" class="info">
+				<div class="col s8">
+					<img src="./img/about/darom_info.jpg" width="100%" class="info">
 				</div>
 			</div>
-
+			<br>
 			<!-- Sovannara -->
 			<div class="row">
-				<div class="col s5">
-					<img src="./img/about/sovannara.jpg" width="100%" height="160" vspace="5">
+				<div class="col s4">
+					<a href="./img/about/sovannara.jpg">
+						<div class="img-hover-zoom">
+							<figure>
+								<img src="./img/about/sovannara.jpg" class="responsive_img">
+							</figure>
+						</div>
+					</a>
 				</div>
-				<div class="col s7">
-					<img src="./img/about/sovannara_info.jpg" width="95%" height="160" class="info">
+				<div class="col s8">
+					<img src="./img/about/sovannara_info.jpg" width="100%" class="info">
 				</div>
 			</div>
 		</div>
