--- a/Takeo.html
+++ b/Takeo.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>TosGo - ខេត្តតាកែវ</title>
-
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<link rel="stylesheet" href="./css/home.css">
 	<link rel="stylesheet" href="./css/materialize.min.css">
 	<link rel="stylesheet" href="./css/travel.css">
