--- a/Banteay Meanchey.html
+++ b/Banteay Meanchey.html
@@ -2,7 +2,7 @@
 
 <head>
 	<title>TosGo - បន្ទាយមានជ័យ</title>
-
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<link rel="stylesheet" href="./css/home.css">
 	<link rel="stylesheet" href="./css/materialize.min.css">
 	<link rel="stylesheet" href="./css/travel.css">
