--- a/Kompongcham.html
+++ b/Kompongcham.html
@@ -3,6 +3,7 @@
 
 <head>
 	<title>TosGo - កំពង់ចាម </title>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<link rel="stylesheet" href="./css/home.css">
 	<link rel="stylesheet" href="./css/materialize.min.css">
 	<link rel="stylesheet" href="./css/travel.css">
