--- a/Kratie.html
+++ b/Kratie.html
@@ -3,6 +3,7 @@
 
 <head>
 	<title> TosGo - ក្រចេះ</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<link rel="stylesheet" href="./css/home.css">
 	<link rel="stylesheet" href="./css/materialize.min.css">
 	<link rel="stylesheet" href="./css/travel.css">
