--- a/Preas vihere.html
+++ b/Preas vihere.html
@@ -3,6 +3,7 @@
 
 <head>
 	<title>TosGo - ព្រះវិហារ</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<link rel="stylesheet" href="./css/materialize.min.css">
 	<link rel="stylesheet" href="./css/home.css">
 </head>
