--- a/Prey Veng.html
+++ b/Prey Veng.html
@@ -2,6 +2,7 @@
 
 <head>
 	<title>TosGo - ព្រៃវែង</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<link rel="stylesheet" href="./css/home.css">
 	<link rel="stylesheet" href="./css/materialize.min.css">
 	<link rel="stylesheet" href="./css/travel.css">
