--- a/Svay rieng.html
+++ b/Svay rieng.html
@@ -4,6 +4,7 @@
 <head>
 
   <title>TosGo - ស្វាយរៀង</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <link rel="stylesheet" href="./css/home.css">
   <link rel="stylesheet" href="./css/materialize.min.css">
   <link rel="stylesheet" href="./css/travel.css">
